--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,16 @@
+/* google font */
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
-* {
+*,
+*::after,
+*::before {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
 
+:root {
+	/* default theme */
+	
+	/* light theme */
+}
